# LibGE-Experiments

cpp/CartCentering/: CMakeCache.txt  GEGCC  GEcart.c  Makefile  a.out  cartcenter-gcc.cpp  cartcenterend.c  cartcenterstart.c  individual.c  main.cpp  result  stats
cpp/CartCentering-2/: CMakeLists.txt  GEcart.c  Makefile  cartcenter-gcc.cpp  cartcenterstart.c  main.cpp
cpp/Classify/: Classify-gcc.cpp  Classifyend.c  Classifystart.c  GEClassify.c  GEClassify.h  GEGCC  Makefile  a.out  grammar.bnf  individual.c  main.cpp  script.gegcc  stats
galib_examples/: GAlib_ examples.html  Makefile  ex1.C  ex2.C
galib_examples/ex1/: GEGCC  Makefile  main.cpp  stats
galib_examples/ex2/: GEGCC  main.cpp
mcge/: GEGCC  README.md  VectorizationTest  gecb.depend  gecb.layout  initfunc.cpp  main.cpp  script.gegcc  spiral-gcc.cpp  spiralend.c  spiralstart.c  stats
mcge_parallel/: GEGCC  GEspiral.c  GEspiral.h  Makefile  app.r  gecb.cbp  grammar.bnf  grammarFullAdder.bnf  grammarFullAdder3regs.bnf  initfunc.cpp  main.cpp  main_works.cpp  multiple_run.sh  newgrammar.bnf  notes.txt  run_tests.sh  spiral-gcc.cpp  stats
octave/: main360seed.cpp
octave/CEC2021/360_parallel_ok/: run_tests.sh  test.sh
octave/CEC2021/360seed_parallel_ok/: CMakeCache.txt  CMakeLists.txt  GEGCC  Makefile  cmake_install.cmake  multiple_run.sh
octave/CEC2021/360seed_parallel_ok/original_individual/: full_adder.sv
octave/CEC2021/360seed_parallel_ok/tmp/: individual_1.m  individual_10.m  individual_14.m  individual_4.m  individual_5.m  individual_6.m  individual_8.m  results  test_results_max  test_results_min
octave/CEC2021/360trivialseed_parallel_ok/: GEGCC  run_tests.sh
octave/GECCO2021/360seed/: run_tests.sh
octave/GECCO2021/360trivialseed/: GEGCC  run_tests.sh
octave/GECCO2021/360trivialseed_hive/: run_tests.sh
octave/GECCO2021/360trivialseed_parallel/: GEGCC  run_tests_original.sh
octave/GECCO2021/660trivialseed/: GEGCC  multiple_run.sh
octave/GECCO2021/Original/: GEGCC
verilator/test_jk/: sc_main.cpp
verilator/test_jk/tmp/: a.out  individual_0.sv  individual_102.sv  (+88 more)
verilog/full_adder_pid/: Rscript.R
verilog/jk_flipflop_1.0/: GEGCC  sc_main.cpp
verilog/jk_flipflop_2.0_genealogy/: GEGCC
verilog/mul4_vector/: GEGCC
verilog/mul4_vector_sloth/: GEGCC  multiple_run.sh
verilog/mul4_vector_tournament_old/: GEGCC  app.r  help_file  sc_main.cpp
verilog/mul4_vector_tournament_verilator/: GEGCC  Rscript.R  out  results  sc_main.cpp  testbench_model.sv
verilog/pid_mutation_xover/: GEGCC  mtcars.txt
verilog/sequence_detector/: GEGCC  a.out
verilog/sequence_detector_io/: GEGCC  a.out
verilog/sloth_genealogy/: GEGCC  app.r
verilog/sloth_pid/: GEGCC  multiple_run.sh
verilog/updownmod8_1.0/: GEGCC  Makefile  README.md  run_tests.sh  testbench_values.vcd
(+4393 files in other folders)
